--- a/src/features/navbar/NavBar.module.scss
+++ b/src/features/navbar/NavBar.module.scss
@@ -34,5 +34,12 @@
     li {
         padding: 0 10px;
         margin: auto 0;
+
+        a {
+            text-decoration: none;
+            &:active, &:visited {
+                color: $mainColor;
+            }
+        }
     }
 }
